# Static-Fire

./: .gitignore  CMakeLists.txt  README.md
data/: static_4_14.csv
lib/: CMakeLists.txt  LJMStreamUtil.cpp  LJMStreamUtil.hpp  LJMUtil.cpp  LJMUtil.hpp
src/: LJM_StreamUtilities.cpp  LJM_StreamUtilities.h  LJM_Utilities.cpp  LJM_Utilities.h  main.cpp  main2.cpp
